# atflow

./: .gitignore  Cargo.toml  README.md
docs/superpowers/plans/: 2026-06-30-atflow-mvp-implementation.md
docs/superpowers/specs/: 2026-06-30-atflow-design.md
scripts/: install.sh
src/: cli.rs  config.rs  flow.rs  history.rs  init.rs  lib.rs  main.rs  open.rs  path_display.rs  search.rs  settings.rs  shell.rs
src/ui/: mod.rs  palette.rs  runtime.rs  theme.rs
tests/: cli_smoke.rs
